added ending to homework 1

--- a/homework/1/ccanada6-hw1.tex
+++ b/homework/1/ccanada6-hw1.tex
@@ -157,6 +157,7 @@ by a parallel algorithm in time $T(n, P)$ be defined by:
                 {T(n,p)}_{total}^{HyperCube} = \Theta(C_{op} * (\frac{n}{p} + \log_{2} p) + \tau \log_{2}p + \mu m_{0}(\log_{2}p + {n}))
             \end{equation}
 
+            Where C\textsubscript{op} is the cost of the multiplication operation, m\textsubscript{0} is the size of a number, and $\mu$ is $\frac{1}{transferRate}$.
     \end{enumerate}
 
 \end{document}
